# scMusketeers

./: .gitignore  HISTORY.md  Makefile  README.md  celltype_matching_HCA_AJRCCM_original.csv  celltypes_AJRCCM.csv  compute_all_metrics.py  compute_leiden.py  compute_metric_script.py  compute_metrics.sh  compute_metrics_3htap.py  compute_metrics_htap.py  compute_semisup_metrics.py  conda_install.txt  corrected_counts_list.txt  expe_summary.txt  full_log_compute_leiden.txt  full_log_compute_metric_script.txt  full_log_compute_metrics_2htap.py.txt  full_log_compute_metrics_3htap.txt  full_log_compute_metrics_htap.py.txt  full_log_compute_metrics_htap.txt  full_log_metricss.txt  log_run.txt  log_umap.txt  menage.txt  metrics_htap_normal.txt  mkdocs.yml  move.sh  nohup.out  pyproject.toml  requirements.txt  run_predict.py  run_script-Copy1.sh  run_script.sh  run_umap.py  run_workflow.py  scanvi_docker.def  scarches_LCA_sin.def  scvi_sin.def  (+6 more)
analysis_notebooks/: compute_silhouette.py  compute_silhouette.sh  recompute_metrics.py
bash_script/: ax_test.sh  compute_metrics.sh  exemple_bego_hp_script.sh  exemple_bego_script.sh  exemple_sbatch_hp_script.sh  htap_hp_optim.sh
celltype/: celltype_matching_HCA_AJRCCM_reann.csv
dca/: __main__.py  api.py  hyper.py  io.py  layers.py  loss.py  network.py  paths.py  permutation.py  run_dca_semi_sup.py  scPermut.py  scPermut_run.py  scPermut_subclassing.py  scPermut_train.py  train.py  utils.py
docs/: contributing.md  examples.md  expe_summary.txt  index.md  requirements.txt
experiment_script/: ajrccm_hyperparam_scheme_1.sh  ajrccm_hyperparam_scheme_2.sh  conda_install.txt  default_df_best.csv  default_df_t10.csv  default_df_t10_SPATIAL.csv  hlca_par_dataset_hyperparam_scheme_1.sh  hlca_par_dataset_hyperparam_scheme_2.sh  htap_hyperparam.sh  htap_hyperparam_scheme_1.sh  htap_hyperparam_scheme_1_gpu.sh  htap_hyperparam_scheme_2.sh  htap_hyperparam_scheme_2_gpu.sh  htap_hyperparam_scheme_3.sh  htap_hyperparam_scheme_3_gpu.sh  htap_hyperparam_scheme_debug.sh  hyperparam_scheme_debug.sh  nohup.out  runfile_template.yaml
obsolete/: __main__.py  train.py
runfile_dir/: readmetemplate.txt  runfile_ID_1.yaml  runfile_ID_10.yaml  runfile_ID_100.yaml  runfile_ID_1000.yaml  runfile_ID_1001.yaml  runfile_ID_1002.yaml  runfile_ID_1003.yaml  runfile_ID_1004.yaml  runfile_ID_1005.yaml  runfile_ID_1006.yaml  runfile_ID_1007.yaml  (+5617 more)
(+218 files in other folders)
