[tool.poetry]
name = "sc-musketeers"
version = "0.1.2"
description = "Deep learning annotation of cell-types with permutation inforced autoencoder"
license = "MIT"
authors = ["AntoineCollin","Christophe Becavin"]
readme = "README.md"
packages = [{include = "scmusketeers"}]
exclude = ["tests/", ".github"]
homepage = "https://scMusketeers.readthedocs.io/"
repository = "https://github.com/AntoineCollin/scMusketeers/"

[tool.poetry.dependencies]
python = "^3.10"
poetry = "^1.8.1"
numpy = "^1.23"
torch = "^2.3.1"
torchvision = "^0.18.1"
keras = "^3.3.3"
scanpy = "^1.10.1"
ax-platform = "^0.4.0"
neptune = "^1.10.4"
str2bool = "^1.1"
pympler = "^1.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.1.1"
flake8 = "^7.0.0"
setuptools = "^70.0.0"
gitchangelog = "^3.0.4"
codecov = "^2.1.13"
pytest-cov = "^4.1.0"
isort = "^5.13.2"
mypy = "^1.8.0"
no-implicit-optional = "^1.4"
types-pyyaml = "^6.0.12.12"
mkdocs = "^1.6.1"
twine = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sc-musketeers = 'scmusketeers:__main__.run_sc_musketeers'
